# chessml

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py
chessml/: __init__.py  const.py  utils.py
chessml/data/: assets.py
chessml/models/: conv_layers.py  conv_vae.py  custom_sequential.py  policy_model.py  vae_bottleneck.py  value_model.py
chessml/play/: player.py  round.py
chessml/train/: standard_training.py
scripts/: iris.py  process_frames.py  sanity_check.py  train_board_autoencoder.py  train_board_detector.py  train_piece_classifier.py  train_policy_model.py  train_value_model.py  validate_board_detector.py  validate_board_recognition.py  validate_pieces_classifier.py
scripts/data/: calc_pieces_weights.py  download_pgns.py  download_piece_sets.py  export_consecutive.py  export_evaluations.py  export_unique_fens.py  generate_augmented_boards.py  visualize_augmented_boards.py  visualize_augmented_pieces.py  visualize_piece_sets.py
scripts/draw/: draw_games.py
scripts/examples/: play_pvai.py  play_pvp.py  read_boards_from_fen.py  read_boards_from_game.py  read_games_from_pgn.py  read_policies_from_game.py  show_board_tensor.py  visualize_composite_boards.py  visualize_composite_pieces.py
scripts/train/: train_board_autoencoder.py  train_board_detector.py  train_board_meta.py  train_elo_predictor.py  train_meta_predictor.py  train_piece_classifier.py  train_policy_model.py  train_value_model.py
scripts/validate/: process_video.sh  validate_board_detector.py  (+1 more)
tests/: test_chessml.py
(+33 files in other folders)
